<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:background="#F73CE2E8"
    tools:context=".SplashActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tic"
        android:layout_marginBottom="200dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tic_tac_toe"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/made_by_sachin"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="80dp"/>


</LinearLayout>

