<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#046052"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="100dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heading"
            android:fontFamily="cursive"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="100dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPlayer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="30dp"
            android:text="@string/player_1_x"
            android:backgroundTint="@color/btnPlayer1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPlayer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/player_2_o"
            android:backgroundTint="@color/btnPlayer2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNewGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#18CC5A"
            android:text="@string/new_game"
            android:textAllCaps="false"
            android:textSize="20sp"
            />

    </LinearLayout>




</LinearLayout>